--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 									<a href="https://github.com/tahniasabah/Evaluation-of-the-performance-of-WGAN-with-comparison-to-Variational-Autoencoder/blob/main/VAE-%20MNIST.ipynb" target= "_blank" class="image fit"><img src="images/gan.jpeg" alt="" /></a>
 									<p>In this project we have modeled a VAE containing an encoder and decoder network with MNIST dataset that contains 60,000 images of handwritten digits.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/tahniasabah/Evaluation-of-the-performance-of-WGAN-with-comparison-to-Variational-Autoencoder/blob/main/VAE-%20MNIST.ipynb" target= "_blank" class="button">View Projec</a></li>
+										<li><a href="https://github.com/tahniasabah/Evaluation-of-the-performance-of-WGAN-with-comparison-to-Variational-Autoencoder/blob/main/VAE-%20MNIST.ipynb" target= "_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								
